# learn-poetry

./: README.md
poetry-new/: pyproject.toml
poetry-new-src/: pyproject.toml
poetry-pycharm/: main.py  pyproject.toml
poetry_cookie/: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
poetry_cookie/docs/: Makefile  conf.py  example.ipynb  make.bat
poetry_cookie/src/poetry_cookie/: __init__.py  poetry_cookie.py
poetry_cookie/tests/: test_poetry_cookie.py
