[tool.poetry]
name = "poetry-new-src"
version = "0.1.0"
description = ""
authors = ["Jorrit Vander Mynsbrugge <44178217+jorritvm@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "poetry_new_src", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
